# Tripmate

./: README.md  create_insurance_predictions_table.sql  srs.json  structure.json  supabase-schema.sql  userflow.json
callAI/: .gitignore  README.md  main.py  model.ipynb  pyproject.toml  requirements.txt
callAI/artifacts/: meta_20250811_235624.json  model_20250811_235624.pkl  scaler_20250811_235624.pkl
callAI/routes/: ml.py  twilio.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/: budget_locations.json  popular_locations.json
frontend/src/app/: globals.css  layout.jsx  not-found.jsx  page.jsx
frontend/src/app/_components/: Loading.jsx  NotificationDropdown.jsx  navbar.jsx  searchbar.jsx
frontend/src/app/about/: page.jsx
frontend/src/app/admin/: page.jsx
frontend/src/app/auth/: page.jsx  page_new.jsx  page_old.jsx
frontend/src/app/community/: page.jsx
frontend/src/app/dashboard/: page.jsx
frontend/src/app/destinations/: page.jsx
frontend/src/app/explore/: page.jsx
frontend/src/app/explore-locations/: page.jsx
frontend/src/app/notifications/: page.jsx
frontend/src/app/privacy/: page.jsx
frontend/src/app/profile/: page.jsx
frontend/src/app/terms/: page.jsx
frontend/src/app/trip/: page.jsx  (+1 more)
frontend/src/components/: LoadingComponents.jsx  UserAvatarUpload.jsx
frontend/src/contexts/: UserContext.jsx
frontend/src/data/: activities.json  budgetLocations.json  popularLocations.json
frontend/src/lib/: api.js  auth-middleware.js  cache.js  client-cache.js  constants.js  supabase-server.js  supabase.js  utils.js
(+75 files in other folders)
