[project]
name = "callai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "mongoengine>=0.29.1",
    "numpy>=2.0.2",
    "openai-whisper>=20250625",
    "pymongo[srv]>=4.14.0",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "pywav>=1.1",
    "scipy>=1.13.1",
    "soundfile>=0.13.1",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
